test_suite/tests/ui/validate/both_validator_and_validate.stderr
error: can not define both `validator` and `validate`
 --> tests/ui/validate/both_validator_and_validate.rs:4:20
  |
4 | #[serde(validate = "validator::Validate::validate")]
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
